--- a/README.qmd
+++ b/README.qmd
@@ -2,7 +2,7 @@
 format: gfm
 ---
 
-# ContextualLasso
+# ContextualDAG
 
 Julia implementation of contextual directed acyclic graphs (DAGs) from the paper ['Contextual directed acyclic graphs'].
 
