Added link to arXiv paper

--- a/README.qmd
+++ b/README.qmd
@@ -4,7 +4,7 @@ format: gfm
 
 # ContextualDAG
 
-Julia implementation of contextual directed acyclic graphs (DAGs) from the paper ['Contextual directed acyclic graphs'].
+Julia implementation of contextual directed acyclic graphs (DAGs) from the paper ['Contextual directed acyclic graphs'](https://arxiv.org/abs/2310.15627).
 
 ## Installation
 
